// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tracking tests on web TrackEvents forwards props to wrapped component 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
>
  bar
</div>
`;

exports[`Tracking tests on web TrackEvents raises error when action name is not set 1`] = `"WithTrackEvents(TestComponent): Missing actionName at position 0, eventName event1"`;

exports[`Tracking tests on web TrackEvents raises error when event name is not set 1`] = `"WithTrackEvents(TestComponent): Missing eventName at position 0, actionName event1ed"`;

exports[`Tracking tests on web TrackEvents raises error when trying to track the same event more than once 1`] = `"WithTrackEvents(TestComponent): Event event1 was tracked multiple times"`;

exports[`Tracking tests on web TrackEvents renders when tracking context is missing 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
>
  foo
</div>
`;

exports[`Tracking tests on web TrackEvents tracks multiple events 1`] = `
Array [
  Array [
    Object {
      "action": "event1ed",
      "attrs": Object {
        "args": Array [
          "event1 arg",
        ],
        "fromProps": "propValue",
        "static": "value",
      },
      "component": "TestComponent",
    },
  ],
  Array [
    Object {
      "action": "event2ed",
      "attrs": Object {
        "args": Array [
          "event2 arg",
        ],
        "fromProps": "propValue",
        "static": "otherValue",
      },
      "component": "TestComponent",
    },
  ],
]
`;

exports[`Tracking tests on web WithTrackScrollDepth does not report missing elements 1`] = `Array []`;

exports[`Tracking tests on web WithTrackScrollDepth forwards props to wrapped component 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
>
  bar
</div>
`;

exports[`Tracking tests on web WithTrackScrollDepth renders when tracking context is missing 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
>
  foo
</div>
`;

exports[`Tracking tests on web WithTrackScrollDepth tracks scroll depth 1`] = `
Array [
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 1,
          "name": "name1",
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 2,
          "name": "name2",
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 3,
          "name": "name3",
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
]
`;

exports[`Tracking tests on web WithTrackScrollDepth tracks scroll depth after update 1`] = `
Array [
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 1,
          "name": "name1",
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 2,
          "name": "name2",
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 3,
          "name": "name3",
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 4,
          "name": "name4",
          "total": 4,
        },
      },
      "component": "ListComponentChild",
    },
  ],
]
`;

exports[`Tracking tests on web WithTrackingContext forwards props to wrapped component 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
>
  bar
</div>
`;

exports[`Tracking tests on web WithTrackingContext raises error when analyticsStream not supplied to top-level context 1`] = `"Missing prop analyticsStream of WithTrackingContext"`;

exports[`Tracking tests on web WithTrackingContext raises error when tracking object not supplied to top-level context 1`] = `"Missing argument trackingObjectName of withTrackingContext()"`;
